--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,3 +29,9 @@ jobs:
         run: |
           make package PLATFORM=appletvos PACKAGE_NAME=palera1nLoaderTV
 
+      - name: upload result
+        uses: actions/upload-artifact@v1
+        with:
+          name: loader-artifact
+          path: ${{ github.workspace }}/loader
+
